[gd_scene load_steps=5 format=2]

[ext_resource path="res://LoginScreen/login.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "Default"

[sub_resource type="Animation" id=2]
resource_name = "NeedName"
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/PlayerName:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/PlayerName:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 387.0
margin_top = 225.0
margin_right = 637.0
margin_bottom = 375.0
rect_min_size = Vector2( 250, 150 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Player Name"
valign = 1

[node name="PlayerName" type="TextEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 250.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 30 )
rect_pivot_offset = Vector2( 125, 15 )
size_flags_horizontal = 3
context_menu_enabled = false

[node name="CreateUser" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 250.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Create"

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 250.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 10 )

[node name="UseCurrent" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 250.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Use Current"

[node name="Validattion" type="AnimationPlayer" parent="CenterContainer"]
anims/Default = SubResource( 1 )
anims/NeedName = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/CreateUser" to="." method="_on_CreateUser_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/UseCurrent" to="." method="_on_UseCurrent_pressed"]
